[gd_scene load_steps=7 format=3 uid="uid://deaonojyom4gf"]

[ext_resource type="Script" path="res://scripts/system/GameController.gd" id="1_cw3ns"]
[ext_resource type="Resource" uid="uid://bwkshpflyauc0" path="res://prefabs/levels/TestLevel.tres" id="2_fixhd"]
[ext_resource type="Texture2D" uid="uid://bmhof4he24kry" path="res://assets/ui/Back_Frame.png" id="3_labr8"]
[ext_resource type="PackedScene" uid="uid://d25674hcnx2dd" path="res://prefabs/systems/rand_position.tscn" id="4_ub5l2"]
[ext_resource type="Script" path="res://scripts/game/bullet_spawn.gd" id="5_e61t7"]
[ext_resource type="PackedScene" uid="uid://cff0irid7qcej" path="res://prefabs/entities/player.tscn" id="7_7no1s"]

[node name="GameRoot" type="Node2D"]
process_mode = 1
script = ExtResource("1_cw3ns")
Levels = Array[Resource("res://scripts/resources/LevelResource.gd")]([ExtResource("2_fixhd")])

[node name="Info" type="Node" parent="."]

[node name="GameTimer" type="Timer" parent="Info"]
one_shot = true

[node name="MissileTimer" type="Timer" parent="Info"]
one_shot = true

[node name="JetTimer" type="Timer" parent="Info"]
one_shot = true

[node name="ObstacleTimer" type="Timer" parent="Info"]
one_shot = true

[node name="HorizontalTimer" type="Timer" parent="Info"]
one_shot = true

[node name="BackFrame" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(960, 540)
texture = ExtResource("3_labr8")

[node name="Background2" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
z_index = 10
offset_right = 424.0
offset_bottom = 1080.0
color = Color(0.564706, 0.619608, 0.866667, 1)

[node name="Background3" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
z_index = 10
offset_left = 1504.0
offset_right = 1924.0
offset_bottom = 1080.0
color = Color(0.564706, 0.619608, 0.866667, 1)

[node name="Sky" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
offset_left = 424.0
offset_right = 1504.0
offset_bottom = 1080.0
color = Color(0.756863, 0.85098, 0.94902, 1)

[node name="DummySky" type="ColorRect" parent="."]
show_behind_parent = true
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.756863, 0.85098, 0.94902, 1)

[node name="CloudControl" type="Node2D" parent="."]

[node name="RandPosition" parent="." instance=ExtResource("4_ub5l2")]

[node name="Marker2D" parent="RandPosition" index="0"]
position = Vector2(221, 600)

[node name="Marker2D3" parent="RandPosition" index="2"]
position = Vector2(1692, 600)

[node name="BulletHolder" type="Node2D" parent="."]
script = ExtResource("5_e61t7")

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("7_7no1s")]
z_index = 0
position = Vector2(957, 157)

[connection signal="timeout" from="Info/GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="Info/MissileTimer" to="." method="_on_missile_timer_timeout"]
[connection signal="timeout" from="Info/JetTimer" to="." method="_on_jet_timer_timeout"]
[connection signal="timeout" from="Info/ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="Info/HorizontalTimer" to="." method="_on_horizontal_timer_timeout"]

[editable path="RandPosition"]
